Bug 332817 - Setting default web browser does not set x-scheme-handler/http(s) for xdg-utils
Summary: Setting default web browser does not set x-scheme-handler/http(s) for xdg-utils
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: 4.11.5
Platform: Gentoo Packages Other
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL: https://bugs.gentoo.org/show_bug.cgi?...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-30 15:42 UTC by Kelly Price
Modified: 2017-07-27 10:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kelly Price 2014-03-30 15:42:44 UTC
Applications outside of KDE (for example, HexChat) that use the XDG runner to open files do not use the MIME type of text/html to open up URLs -- they use x-scheme-handler/http and x-scheme-handler/https instead.  

For example under an old setup, HexChat will try to open a http:// or https:// url.  Without the setting, it ends up running Links in X11 mode.  (I've since yanked out X11 mode from my compile of Links, as I'm using Gentoo).



Reproducible: Always

Steps to Reproduce:
1.  Set any browser in KDE System Settings to be default (say Chrome).
2.  Install Links with X11 (this auto-sets a default XDG x-scheme-handler).
3.  Install HexChat (it's an IRC client).
4.  Open up and connect to Freenode.
5.  Click on any link.
Actual Results:  
Links is opened up to the URL.

Expected Results:  
Chrome is opened up to the URL.

KDE needs to adjust ~/.local/share/applications/mimeapps.list to put in the proper x-scheme-handler/http(s) listings.
Comment 1 Alad Wenter 2014-04-15 02:40:19 UTC
Confirmed under KDE 4.11.3, Tanglu (Debian). 

In the case of Hexchat it did nothing for me until I set x-scheme-handler/http.
Comment 2 Florian Hubold 2014-08-24 16:55:56 UTC
Cannot confirm here with KDE 4.11.10. After setting default browser to something else, then back to chromium-browser, x-scheme-handler/http was properly set.

You may want to check/compare outputs of

xdg-settings get default-web-browser
xdg-settings get default-url-scheme-handler
xdg-mime query default x-scheme-handler/http
xdg-mime query default text/html
Comment 3 Yurii Kolesnykov 2015-11-22 05:24:14 UTC
Can confirm this on system-settings 5.4.95, frameworks 5.16.0
Comment 4 Kai Uwe Broulik 2017-07-27 10:53:20 UTC
Git commit 1193971e9a270d37970cf7799444773be68576c6 by Kai Uwe Broulik.
Committed on 27/07/2017 at 10:52.
Pushed by broulik into branch 'master'.

[Component Chooser] Update http(s) scheme handler when changing default browser
FIXED-IN: 5.11.0

Differential Revision: https://phabricator.kde.org/D6933

M  +18   -0    kcms/componentchooser/componentchooserbrowser.cpp

https://commits.kde.org/plasma-desktop/1193971e9a270d37970cf7799444773be68576c6