[Component Chooser] Update http(s) scheme handler when changing default browser

BUG: 332817
FIXED-IN: 5.11.0

Differential Revision: https://phabricator.kde.org/D6933